--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
         contentType: 'application/json',
         headers: {
           'x-api-key-id': 'jl9mbhakpb',
-          'x-api-key': 'IhpXUMRgLm2drAFChTLQP32bESCIh70769sroiG1'
+          'x-api-key': 'IhpXUMRgLm2drAFChTLQP32bESCIh70769sroiG1',
+          'origin': 'https://postfix.utopian.io'
         },
         data: JSON.stringify({
           "author": username,
