--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       $.ajax({
         contentType: 'application/json',
         headers: {
-          'x-api-key-id': 'jl9mbhakpb',
-          'x-api-key': 'IhpXUMRgLm2drAFChTLQP32bESCIh70769sroiG1',
+          'x-api-key-id': '',
+          'x-api-key': '',
           'origin': 'https://postfix.utopian.io'
         },
         data: JSON.stringify({
